bat.bool1.sumdouble.SumDouble.scala.error
Compilation error:
SumDouble:5: error: '(' expected but identifier found.
  if a==b
     ^